src/test/resources/semantic/custom/reject/tooFewFunctionCallParams2.ul
void main() {
    foo();
}

void foo(int one) {
}
